--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marco Antonio</title>
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+<header>
+    <h3>Meu curriculo</h3>
+
+u1
+
+
+
+</header>
+
+
+
+
  <h1>Sobre Mim</h1>   
 <p>Me chamo Marco, gosto de praticar atividade fisica</p>
 
