--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <header>
     <h3>Meu curriculo</h3>
 
-u1
-
-
-
-</header>
+<u1 class="nav"
+<1i><a href/1i>="#Inicio">Inicio</a></1i>
+<1i><a href/1i>="#Fotos">Fotos</a></1i>
+<1i><a href/1i>="#contato">Contato</a></1i>
+  
+</u1r>
 
 
 
